# SantiSZR

./: .env.example  .gitignore  README.md  REWRITE_PLAN.md  install-windows-prereqs.bat  pyproject.toml  restart-web.bat
docs/: API_CONTRACTS.md  ARCHITECTURE.md  MIGRATION_NOTES.md  操作说明书.md
scripts/: install-windows-prereqs.ps1  restart-web.ps1
src/ctranslate2/: __init__.py  logging.py  models.py
src/santiszr/: __init__.py  app.py
src/santiszr/config/: models.py  settings.py
src/santiszr/core/: app_state.py  asset_library.py  diagnostics.py  exceptions.py  gpu_memory.py  llm_config.py  logger.py  paths.py  tasks.py  (+2 more)
tests/: conftest.py  test_asset_library.py  test_avatar_service.py  test_content_service.py  test_diagnostics.py  test_ffmpeg_adapter.py  test_gpu_memory.py  test_i18n.py  test_main_window_navigation.py  test_no_legacy_paths.py  test_no_mojibake.py  test_postprocess_service.py  test_product_ui_clone_options.py  test_publish_service.py  test_rewrite_service.py  test_session_state.py  test_settings_dialog.py  test_subtitle_corrector.py  test_subtitle_service.py  test_task_controller.py  test_tts_service.py  test_tuilionnx_helper.py  test_tuilionnx_memory.py  test_ultimate_clone_pending_ui.py  test_voxcpm_client.py  test_voxcpm_helper.py  test_whisper_transcriber.py  test_worker_protocol.py  test_worker_runner.py  test_workflow_service.py  test_workspace_persistence.py
tests/web/: test_api_basic.py  test_files_state.py  test_workspace_state.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  styles.css  types.ts
(+97 files in other folders)
