[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "santiszr"
version = "0.1.0"
description = "Desktop rewrite bootstrap for SantiSZR."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115,<1.0",
  "faster-whisper>=1.1,<2.0",
  "httpx>=0.27,<1.0",
  "numpy>=1.26,<3.0",
  "pydantic>=2.9,<3.0",
  "playwright>=1.45,<2.0",
  "PySide6>=6.8,<7.0",
  "python-multipart>=0.0.12,<1.0",
  "tenacity>=9.0,<10.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.scripts]
santiszr = "santiszr.app:main"
santiszr-gui = "santiszr.app:main"
santiszr-dev = "santiszr.app:dev_main"
santiszr-web = "santiszr.web.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/santiszr", "src/ctranslate2"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.7,<1.0",
]
